<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/regies_user_layout"
    android:background="#FFFFFF" >

    <View
        android:background="@drawable/shape_white_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_title_height"/>

    <ImageView
        android:id="@+id/regies_user_back"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="27dip"
        android:padding="8dp"
        android:src="@mipmap/back_login_or_regies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="53dp"
            android:text="@string/regies_username"
            android:textColor="@color/black"
            android:textSize="@dimen/register_title_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/regies_hint"
            android:textColor="#AAAAAA"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_line_height_item"
            android:layout_marginTop="@dimen/margin_widget_v_small"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/padding_right_left"
            android:paddingLeft="@dimen/padding_right_left"
            android:orientation="vertical">

            <com.jld.torsun.view.MyEditText
                android:singleLine="true"
                android:id="@+id/et_regies_nike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableRight="@drawable/et_selector_delete"
                android:hint="@string/regies_hint_username"
                android:imeOptions="actionDone"
                android:paddingRight="@dimen/delete_padding_right"
                android:textColorHint="@color/graysh" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:background="@color/line_gray" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_line_height_item"
        android:layout_marginTop="@dimen/margin_widget_v_small"
        android:gravity="center_vertical"
        android:paddingRight="@dimen/padding_right_left"
        android:paddingLeft="@dimen/padding_right_left"
        android:orientation="vertical">

        <com.jld.torsun.view.MyEditText
            android:id="@+id/et_regies_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableRight="@drawable/et_selector_delete"
            android:hint="@string/regies_hint_realname"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:paddingRight="@dimen/delete_padding_right"
            android:textColorHint="@color/graysh" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:background="@color/line_gray" />

    </LinearLayout>

        <Button
            android:layout_marginLeft="@dimen/padding_right_left"
            android:layout_marginRight="@dimen/padding_right_left"
            android:id="@+id/bt_regiest_user_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dip"
            android:background="@drawable/shape_red_button_backgroud"
            android:gravity="center"
            android:paddingBottom="12dip"
            android:paddingTop="12dip"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_22" />

        <LinearLayout
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:id="@+id/ll_regiest_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/sure_protocol"
                android:textColor="#7A7A7A"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/tv_regiest_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:singleLine="true"
                android:text="@string/tucson_protocol"
                android:textColor="#F85515"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_regiest_have"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/regies_have_account"
        android:textColor="#F85515"
        android:textSize="@dimen/sp_22" />

</RelativeLayout>