<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <View
        android:background="@drawable/shape_white_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_title_height"/>

    <LinearLayout
        android:id="@+id/ll_register_code_back"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="33dp"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:background="@mipmap/regies_back"
            android:clickable="false"
            android:scaleType="centerInside" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/back_high"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/regies_back"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/ll_register_code_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/regies_code"
            android:textColor="@color/black"
            android:textSize="@dimen/register_title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/regies_code_verify"
                android:textSize="14sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_regies_code_country_code"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text=" +86"
                    android:textColor="@color/backgroud_red"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_regies_code_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12345678910"
                    android:textColor="@color/backgroud_red"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>

        <com.jld.torsun.view.MyEditText
            android:id="@+id/et_regies_set_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_et_height"
            android:layout_marginLeft="@dimen/padding_right_left"
            android:layout_marginRight="@dimen/padding_right_left"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:clickable="false"
            android:drawableRight="@drawable/et_selector_delete"
            android:hint="@string/get_security_code"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingRight="@dimen/delete_padding_right"
            android:singleLine="true"
            android:textColorHint="@color/light_gray"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/padding_right_left"
            android:layout_marginRight="@dimen/padding_right_left"
            android:layout_marginTop="@dimen/line_top_padding"
            android:background="@color/line_gray" />

        <Button
            android:layout_marginLeft="@dimen/padding_right_left"
            android:layout_marginRight="@dimen/padding_right_left"
            android:id="@+id/bt_regiest_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dip"
            android:background="@drawable/shape_red_button_backgroud"
            android:gravity="center"
            android:paddingBottom="12dip"
            android:paddingTop="12dip"
            android:text="@string/regies_finish"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regies_second_text1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_regies_count_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="60"
                android:textColor="@color/backgroud_red"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_regies_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regies_second_text2"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>