<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true" >

    <LinearLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="@dimen/dialog_height"
        android:layout_centerInParent="true"
        android:layout_marginLeft="24dip"
        android:layout_marginTop="24dip"
        android:background="@drawable/shape_dialog_white_bg"
        android:orientation="vertical"
         >
        <TextView
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/t_frag_set_dia_title"
            android:paddingTop="@dimen/dialog_title_padding_top"
            android:textColor="@color/hint_title"
            android:textSize="@dimen/dialog_title_size" />

        <TextView
            android:id="@+id/tv_dialog_cache_message"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="6"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/FragmentSet_cache_message"
            android:textColor="@color/item_content_black"
            android:textSize="@dimen/dialog_message_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/button_stroke_colour" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_cache_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_left_pre_bg"
                android:text="@string/FragmentSet_cache_cancel"
                android:textColor="@color/backgroud_red"
                android:textSize="@dimen/dialog_below_size" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/button_stroke_colour" />

            <Button
                android:id="@+id/bt_cache_dialog_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_right_pre_bg"
                android:text="@string/FragmentSet_cache_confirm"
                android:textColor="@color/backgroud_red"
                android:textSize="@dimen/dialog_below_size" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_cache_dialog_close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@mipmap/close_dialog" />

</RelativeLayout>